# hr-fidelity

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
data/: manifest.json
data/llm_scores/: backend-eng.json  fang-swe-nyc.json  infra-eng.json  ml-researcher.json  recruiter.json
data/names/: bertrand_mullainathan_pairs.json  census_surnames.json  ssa_first_names.json
data/reqs/: backend-eng.json  fang-swe-nyc.json  infra-eng.json  ml-researcher.json  recruiter.json
docs/: ARCHITECTURE.md  DESIGN.md  HANDOFF.md  data-generator.md  landing-content.md  phoenix-llm-smoke.json  phoenix-observability.md  phoenix-traces-export.json
scripts/: blind_invariance_experiment.py  demo_m2.py  gen_llm_scores.py  llm_error_demo.py  llm_smoke.py
src/hrfidelity/: __main__.py  tracing.py
src/hrfidelity/audit/: counterfactual_drift.py  disparate_impact.py  report.py
src/hrfidelity/data/: ci_checks.py  corpus_generator.py  counterfactual.py  name_loader.py  req_loader.py  resume_generator.py  schema.py
src/hrfidelity/fidelity/: calibration.py  kappa.py  pairs.py  protocol.py
src/hrfidelity/screener/: llm_screener.py  protocol.py  rubric_screener.py
src/hrfidelity/server/: app.py
src/hrfidelity/server/static/: index-e.html  index.html  landing-preview.html
src/hrfidelity/server/static/designs/: design-a.html  design-b.html  (+5 more)
tests/: test_audit.py  test_ci_checks.py  test_counterfactual.py  test_fidelity.py  test_llm_screener.py  test_name_loader.py  test_req_fixtures.py  test_resume_generator.py  test_screener.py  test_server.py
